Committed PRCS version branch-1-0.1
Create the branch-1-0

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.1 Tue, 05 Jan 1999 15:54:00 +0100 verna $
+% PRCS: $Id: fixme.dtx 1.2 Tue, 05 Jan 1999 16:28:23 +0100 verna $
 %
 % Author:        Didier Verna <verna@inf.enst.fr>
 % Maintainer:    Didier Verna <verna@inf.enst.fr>
@@ -49,15 +49,15 @@
 %
 % \fi
 %
-% \iffalse $Format: "% \newcommand{\fileversion}{$PackageVersion$}"$ \fi
-% newcommand{fileversion}{0.2}
-% \newcommand{\filedate}{1998/12/29}
-% \newcommand{\docdate}{1998/12/29}
+% \iffalse $Format: "% \\newcommand{\\packageversion}{$PackageVersion$}"$ \fi
+% \newcommand{\packageversion}{1.0-b1}
+% \iffalse $Format: "% \\newcommand{\\packagedate}{$PackageDate$}"$ \fi
+% \newcommand{\packagedate}{1999/01/05}
 % \MakeShortVerb{\|}
-% \date{\docdate}
-% \title{\textsf{fixme} -- a \LaTeX{} package fort inserting FIXME notes
-% in draft documents \thanks{This document describes \textsf{fixme} version
-% \fileversion , last updated \docdate .}}
+% \date{\today}
+% \title{\textsf{FiXme} -- a \LaTeX{} package fort inserting FIXME notes
+% in draft documents \thanks{This document describes \textsf{FiXme} version
+% \packageversion , last updated \packagedate .}}
 % \author{Didier Verna\\
 % |mailto:verna@inf.enst.fr|\\
 % |http://www.inf.enst.fr/~verna/|}
