--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.3 Tue, 05 Jan 1999 17:49:34 +0100 verna $
+% PRCS: $Id: fixme.dtx 1.4 Tue, 05 Jan 1999 18:27:25 +0100 verna $
 %
 % Author:        Didier Verna <verna@inf.enst.fr>
 % Maintainer:    Didier Verna <verna@inf.enst.fr>
@@ -49,8 +49,10 @@
 %
 % \fi
 %
+% \CheckSum{44}
+%
 % ^^A $Format: "% \\newcommand{\\packageversion}{$PackageVersion$}"$
-% \newcommand{\packageversion}{1.0-b4}
+% \newcommand{\packageversion}{1.0-b5}
 % ^^A $Format: "% \\newcommand{\\packagedate}{$PackageDate$}"$
 % \newcommand{\packagedate}{1999/01/05}
 % \MakeShortVerb{\|}
@@ -147,6 +149,7 @@
 % code implementing this package. First, the package identifies itself:
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
+%% Don't worry about this, my personnal prcs crap...
 %% $Format: "\\ProvidesPackage{fixme}[$PackageDate$]"$
 \ProvidesPackage{fixme}[1999/01/05]
 
