Committed PRCS version branch-1-0.6
Few modifications for prcs keyword formatting

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.4 Tue, 05 Jan 1999 18:27:25 +0100 verna $
+% PRCS: $Id: fixme.dtx 1.5 Wed, 06 Jan 1999 11:20:15 +0100 verna $
 %
 % Author:        Didier Verna <verna@inf.enst.fr>
 % Maintainer:    Didier Verna <verna@inf.enst.fr>
@@ -52,12 +52,12 @@
 % \CheckSum{44}
 %
 % ^^A $Format: "% \\newcommand{\\packageversion}{$PackageVersion$}"$
-% \newcommand{\packageversion}{1.0-b5}
+% \newcommand{\packageversion}{1.0-b6}
 % ^^A $Format: "% \\newcommand{\\packagedate}{$PackageDate$}"$
-% \newcommand{\packagedate}{1999/01/05}
+% \newcommand{\packagedate}{1999/01/06}
 % \MakeShortVerb{\|}
 % \date{\today}
-% \title{\textsf{FiXme} -- a \LaTeX{} package fort inserting FIXME notes
+% \title{\textsf{FiXme} -- a \LaTeX{} package fort inserting fixme notes
 % in draft documents \thanks{This document describes \textsf{FiXme} version
 % \packageversion , last updated \packagedate .}}
 % \author{Didier Verna\\
@@ -149,9 +149,9 @@
 % code implementing this package. First, the package identifies itself:
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
-%% Don't worry about this, my personnal prcs crap...
-%% $Format: "\\ProvidesPackage{fixme}[$PackageDate$]"$
-\ProvidesPackage{fixme}[1999/01/05]
+% ^^A Don't worry about this: my personal prcs crap.
+% ^^A $Format: "\\ProvidesPackage{fixme}[$PackageDate$]"$
+\ProvidesPackage{fixme}[1999/01/06]
 
 %    \end{macrocode}
 % Then, we define our initial commands. Internal commands are all empty,
