--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.5 Wed, 06 Jan 1999 11:20:15 +0100 verna $
+% PRCS: $Id: fixme.dtx 1.6 Wed, 06 Jan 1999 15:00:36 +0100 verna $
 %
 % Author:        Didier Verna <verna@inf.enst.fr>
 % Maintainer:    Didier Verna <verna@inf.enst.fr>
@@ -49,15 +49,15 @@
 %
 % \fi
 %
-% \CheckSum{44}
+% ^^A \CheckSum{44}
 %
 % ^^A $Format: "% \\newcommand{\\packageversion}{$PackageVersion$}"$
-% \newcommand{\packageversion}{1.0-b6}
+% \newcommand{\packageversion}{1.1-b1}
 % ^^A $Format: "% \\newcommand{\\packagedate}{$PackageDate$}"$
 % \newcommand{\packagedate}{1999/01/06}
 % \MakeShortVerb{\|}
 % \date{\today}
-% \title{\textsf{FiXme} -- a \LaTeX{} package fort inserting fixme notes
+% \title{\textsf{FiXme} -- a \LaTeXe{} package fort inserting fixme notes
 % in draft documents \thanks{This document describes \textsf{FiXme} version
 % \packageversion , last updated \packagedate .}}
 % \author{Didier Verna\\
@@ -100,26 +100,26 @@
 % \DescribeEnv{final}\DescribeEnv{draft} In {\em final} mode (the default)
 % any remaining fixme note in the document generates an error. Well, if there
 % are parts to be fixed, the document is not final right? On the contrary, the
-% {\em draft} option tells \textsf{fixme} to issue fixme notes in a manner
+% {\em draft} option tells \textsf{FiXme} to issue fixme notes in a manner
 % defined by the following options (those ones can be mixed): 
 % \par
-% \DescribeEnv{nomargin} By default, \texttt{fixme} inserts the fixme notes
+% \DescribeEnv{nomargin} By default, \texttt{FiXme} inserts the fixme notes
 % in the margin, like the one shown in the introduction of this document.
 % This is the original utility I wanted to implement. The note appears in
 % small characters, flushed to the right, and prefixed with a bold
-% \textbf{FIXME: }. If you want to disable this feature, pass the {\em
+% \textbf{FIXME: }. If you want to disable margin notes, pass the {\em
 % nomargin} option to the package.
 % \par
 % \DescribeEnv{index} With the {\em index} option, fixme notes can also be 
-% inserted in the index of your document. All \texttt{fixme} index entries
+% inserted in the index of your document. All \texttt{FiXme} index entries
 % appear under the \textbf{***FIXME} key at the beginning of the index.
 % \par
 % \DescribeEnv{warning}\DescribeEnv{info} Additionally, you might want to
 % output warnings on the terminal or in the log file. The {\em warning} option 
-% outputs a warning on the terminal with the fixme note and the line number in
-% from source file. This warning is also registered in the log file. If you
-% only want to register the fixme notes in the log file, use the {\em info}
-% option instead. It does essentially the same, but doesn't mess up your
+% outputs a warning on the terminal with the fixme note and the line number
+% from the source file. This warning is also registered in the log file. If
+% you only want to register the fixme notes in the log file, use the {\em
+% info} option instead. It does essentially the same, but doesn't mess up your 
 % terminal output.
 % \begin{quote}
 % - And what if I want output on the terminal, but not in the log file?\\
@@ -141,12 +141,14 @@
 % used by the |\fixme{}| command to generate the fixme note in different ways.
 % However, if you are not satisfied with the way they perform their job, you
 % can redefine them using |\renewcommand{}| if you like. Please refer to the
-% next section to see how they are implemented.
+% next section to see how they are implemented by default.
 %
 %
 % \section{The Code}
 % For the interested reader, here is a short sequential description of the
-% code implementing this package. First, the package identifies itself:
+% code implementing this package. Nothing clever, really, I think. But you
+% know, I'm rather dumb as for writing packages\ldots{} Makes me remember, my
+% mum used to tell me... anyway. First, the package identifies itself:
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
 % ^^A Don't worry about this: my personal prcs crap.
@@ -154,49 +156,66 @@
 \ProvidesPackage{fixme}[1999/01/06]
 
 %    \end{macrocode}
-% Then, we define our initial commands. Internal commands are all empty,
-% except for |\FiXmeMargin{}| which is the default. Also, the initial behavior 
-% of |\fixme{}| corresponds to the {\em final} mode (generating an error).
+% Here, we define some booleans that will control the behavior of the 
+% |\fixme{}| macro. By default, only the margin note is enabled:
+%    \begin{macrocode}
+\newif \iffixmemargin  \fixmemargintrue
+\newif \iffixmeindex   \fixmeindexfalse
+\newif \iffixmewarning \fixmewarningfalse
+\newif \iffixmeinfo    \fixmeinfofalse
+
+%    \end{macrocode}
+%
+% There, we define our internal commands. The user will be able to redefine
+% them with |\renewcommand{}| if he's not happy with the proposed
+% implementation. 
 %    \begin{macrocode}
 \newcommand{\FiXmeMargin}[1]{%
 \marginpar{\footnotesize\flushright\textbf{FIXME: }\em #1}}
-\newcommand{\FiXmeWarning}[1]{}
-\newcommand{\FiXmeInfo}[1]{}
-\newcommand{\FiXmeIndex}[1]{}
-
-\newcommand{\fixme}[1]{%
-\PackageError{fixme}{`FIXME: #1' left in final version.}}
+\newcommand{\FiXmeIndex}[1]{\index{***@FIXME:!#1}}
+\newcommand{\FiXmeWarning}[1]{\PackageWarning{fixme}{`FIXME: #1'}}
+\newcommand{\FiXmeInfo}[1]{\PackageInfo{fixme}{`FIXME: #1'}}
 
 %    \end{macrocode}
-% Now, we declare our options. First, the options controlling which actions
+% Now, we define |\fixme{}| to nothing by default. The options will take care
+% of setting it properly.
+%    \begin{macrocode}
+\newcommand{\fixme}[1]{}
+
+%    \end{macrocode}
+% Time to deal with the options. First, the options controlling which actions
 % should be performed when a \verb!\fixme{}! command is issued,
 %    \begin{macrocode}
-\DeclareOption{nomargin}{\renewcommand{\FiXmeMargin}[1]{}}
-
-\DeclareOption{warning}{\renewcommand{\FiXmeWarning}[1]{%
-\PackageWarning{fixme}{`FIXME: #1'}}}
-
-\DeclareOption{info}{\renewcommand{\FiXmeInfo}[1]{%
-\PackageInfo{fixme}{`FIXME: #1'}}}
-
-\DeclareOption{index}{\renewcommand{\FiXmeIndex}[1]{%
-\index{***@FIXME:!#1}}}
+\DeclareOption{nomargin}{\fixmemarginfalse}
+\DeclareOption{index}{\fixmeindextrue}
+\DeclareOption{warning}{\fixmewarningtrue}
+\DeclareOption{info}{\fixmeinfotrue}
 
 %    \end{macrocode}
 % and then the global behavior options:
 %    \begin{macrocode}
-\DeclareOption{final}{}
+\DeclareOption{final}{\renewcommand{\fixme}[1]{%
+\PackageError{fixme}{`FIXME: #1' left in final version.}}}
 \DeclareOption{draft}{\renewcommand{\fixme}[1]{%
-\FiXmeMargin{#1}%
-\FiXmeWarning{#1}%
-\FiXmeInfo{#1}%
-\FiXmeIndex{#1}}}
+\iffixmemargin\FiXmeMargin{#1}\fi%
+\iffixmewarning\FiXmeWarning{#1}\fi%
+\iffixmeinfo\FiXmeInfo{#1}\fi%
+\iffixmeindex\FiXmeIndex{#1}\fi}}
 
 %    \end{macrocode}
-% Finally, we process the options.
+% The {\em final} mode is considered to be the default:
 %    \begin{macrocode}
-\ProcessOptions
+\ExecuteOptions{final}
+
+%    \end{macrocode}
+% Finally, we process the options. In order to be sure that global options are 
+% processed first (this allows overriding them by passing opposite ones to the 
+% package directly), I use the *-form.
+%    \begin{macrocode}
+\ProcessOptions*
 
 %    \end{macrocode}
 %
 % \Finale\PrintChanges
+%
+% ^^A fixme.dtx ends here.
