--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.6 Wed, 06 Jan 1999 15:00:36 +0100 verna $
+% PRCS: $Id: fixme.dtx 1.7 Wed, 06 Jan 1999 17:08:34 +0100 verna $
 %
 % Author:        Didier Verna <verna@inf.enst.fr>
 % Maintainer:    Didier Verna <verna@inf.enst.fr>
@@ -49,10 +49,10 @@
 %
 % \fi
 %
-% ^^A \CheckSum{44}
+% \CheckSum{63}
 %
 % ^^A $Format: "% \\newcommand{\\packageversion}{$PackageVersion$}"$
-% \newcommand{\packageversion}{1.1-b1}
+% \newcommand{\packageversion}{1.1-b2}
 % ^^A $Format: "% \\newcommand{\\packagedate}{$PackageDate$}"$
 % \newcommand{\packagedate}{1999/01/06}
 % \MakeShortVerb{\|}
@@ -62,7 +62,7 @@
 % \packageversion , last updated \packagedate .}}
 % \author{Didier Verna\\
 % |mailto:verna@inf.enst.fr|\\
-% |http://www.inf.enst.fr/~verna/|}
+% |http://www.inf.enst.fr/\~{}verna|}
 % \maketitle
 %
 %
@@ -147,8 +147,9 @@
 % \section{The Code}
 % For the interested reader, here is a short sequential description of the
 % code implementing this package. Nothing clever, really, I think. But you
-% know, I'm rather dumb as for writing packages\ldots{} Makes me remember, my
-% mum used to tell me... anyway. First, the package identifies itself:
+% know, I'm rather dumb as for writing packages\ldots{} this reminds
+% me\ldots{} my ol'mum used to tell me... anyway. First, the package
+% identifies itself: 
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
 % ^^A Don't worry about this: my personal prcs crap.
@@ -159,10 +160,10 @@
 % Here, we define some booleans that will control the behavior of the 
 % |\fixme{}| macro. By default, only the margin note is enabled:
 %    \begin{macrocode}
-\newif \iffixmemargin  \fixmemargintrue
-\newif \iffixmeindex   \fixmeindexfalse
-\newif \iffixmewarning \fixmewarningfalse
-\newif \iffixmeinfo    \fixmeinfofalse
+\newif\iffixmemargin\fixmemargintrue
+\newif\iffixmeindex\fixmeindexfalse
+\newif\iffixmewarning\fixmewarningfalse
+\newif\iffixmeinfo\fixmeinfofalse
 
 %    \end{macrocode}
 %
