--- a/test.ltx
+++ b/test.ltx
@@ -5,35 +5,35 @@
 %% Author:        Didier Verna <verna@inf.enst.fr>
 %% Maintainer:    Didier Verna <verna@inf.enst.fr>
 %% Created:       Wed Jan  6 13:35:11 1999 under XEmacs 21.2 (beta 8)
-%% Last Revision: Wed Jan  6 13:37:51 1999
+%% Last Revision: Fri Mar 12 12:31:24 1999
 
 %% This file is part of FiXme.
 
 %% FiXme is distributed in the hope that it will be useful,
 %% but WITHOUT ANY WARRANTY; without even the implied warranty of
 %% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-%                                       
+%
 %% You are NOT ALLOWED to distribute this file alone. However,
 %% you are allowed to distribute this file under the condition
 %% that it is distributed along with the whole FiXme package.
 %% If you receive only some of these files from someone, complain!
-%                                       
+%
 %% You are NOT ALLOWED to modify this file, or any other file in the
 %% FiXme package, neither to distribute modified versions of it. However,
 %% you are allowed to freely incorporate (possibly modified) parts of
 %% this file in other files with clearly different names, provided
 %% that the original authors are given full credit for their work.
-%                                       
+%
 %% You are NOT ALLOWED to charge a fee for distribution or use of this
 %% package or any derivative work as described above, other than for the
-%% physical act of transferring copies. 
+%% physical act of transferring copies.
 
 
 %%% Commentary:
 
 %% Contents management by FCM version 0.1.
 
-\documentclass[draft]{article}
+\documentclass[draft]{book}
 \usepackage[index,warning]{fixme}
 
 \begin{document}
@@ -58,6 +58,8 @@ given full credit for their work\fixme{Note 3}.
 You are NOT ALLOWED to charge a fee for distribution or use of this package or
 any derivative work as described above, other than for the physical act of
 transferring copies\fixme{Note 4}.
+
+\listoffixmes
 
 \end{document}
 
