Committed PRCS version branch-1-1.6
Support for classes article, report and book

--- a/test.ltx
+++ b/test.ltx
@@ -5,7 +5,7 @@
 %% Author:        Didier Verna <verna@inf.enst.fr>
 %% Maintainer:    Didier Verna <verna@inf.enst.fr>
 %% Created:       Wed Jan  6 13:35:11 1999 under XEmacs 21.2 (beta 8)
-%% Last Revision: Fri Mar 12 12:31:24 1999
+%% Last Revision: Fri Mar 12 15:05:01 1999
 
 %% This file is part of FiXme.
 
@@ -33,7 +33,7 @@
 
 %% Contents management by FCM version 0.1.
 
-\documentclass[draft]{book}
+\documentclass[draft]{article}
 \usepackage[index,warning]{fixme}
 
 \begin{document}
