--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.10 Fri, 12 Mar 1999 14:36:02 +0100 verna $
+% PRCS: $Id: fixme.dtx 1.11 Fri, 12 Mar 1999 15:26:07 +0100 verna $
 %
 % Author:        Didier Verna <verna@inf.enst.fr>
 % Maintainer:    Didier Verna <verna@inf.enst.fr>
@@ -51,10 +51,10 @@
 %
 % ^^A Donald Arseneau gave me this hint to put REAL comments in .dtx files
 % \catcode`\¡=14
-% \CheckSum{94}
+% \CheckSum{150}
 %
 % ^^A $Format: "% \\newcommand{\\packageversion}{$PackageVersion$}"$
-% \newcommand{\packageversion}{1.1-b4}
+% \newcommand{\packageversion}{1.1-b5}
 % ^^A $Format: "% \\newcommand{\\packagedate}{$PackageDate$}"$
 % \newcommand{\packagedate}{1999/03/12}
 % \MakeShortVerb{\|}
@@ -108,7 +108,7 @@
 % {\em draft} option tells \textsf{FiXme} to issue fixme notes in a manner
 % defined by the following options (those ones can be mixed):
 % \par
-% \DescribeEnv{nomargin} By default, \texttt{FiXme} inserts the fixme notes
+% \DescribeEnv{nomargin} By default, \textsf{FiXme} inserts the fixme notes
 % in the margin, like the one shown in the introduction of this document.
 % This is the original utility I wanted to implement. The note appears in
 % small characters, flushed to the right, and prefixed with a bold
@@ -116,7 +116,7 @@
 % nomargin} option to the package.
 % \par
 % \DescribeEnv{index} With the {\em index} option, fixme notes can also be
-% inserted in the index of your document. All \texttt{FiXme} index entries
+% inserted in the index of your document. All \textsf{FiXme} index entries
 % appear under the \textbf{***FIXME} key at the beginning of the index.
 % \par
 % \DescribeEnv{warning}\DescribeEnv{info} Additionally, you might want to
@@ -146,12 +146,15 @@
 % can redefine them using |\renewcommand{}| if you like. Please refer to the
 % next section to see how they are implemented by default.
 % \par
-% \DescribeMacro{\listoffixmes}\DescribeEnv{\listfixmename}
-% \texttt{FiXme} remembers where you put fixme notes in a toc-like file with
+% \DescribeMacro{\listoffixmes}\DescribeMacro{\listfixmename}
+% \textsf{FiXme} remembers where you put fixme notes in a toc-like file with
 % extension ``.lox''. This command generates a list of fixme notes in a manner
 % similar to that of the list of figures for instance. By default, the list is
 % labeled ``List of FIXME's''. This is the default value of |\listfixmename|
-% that you can change with |\renewcommand{}|.
+% that you can change with |\renewcommand{}|. Layout currently supported are
+% article, report and book. If you use another document class, the layout will
+% be defaulted to article. To change this, you have to redifine
+% |\listoffixmes| and |\l@fixme|.
 %
 %
 % \StopEventually{\par Well, I think that's it. Enjoy using FiXme!!
@@ -189,8 +192,30 @@
 %    \end{macrocode}
 %
 % and the different versions of the |\listoffixmes| command for the different
-% document classes:
+% document classes (article, report, book):
 %    \begin{macrocode}
+\newcommand\listoffixmes@article{%
+  \section*{\listfixmename
+    \@mkboth{\MakeUppercase\listfixmename}%
+    {\MakeUppercase\listfixmename}}%
+  \@starttoc{lox}%
+  }
+\newcommand*\l@fixme@article{\@dottedtocline{1}{1.5em}{2.3em}}
+
+\newcommand\listoffixmes@report{%
+  \if@twocolumn
+  \@restonecoltrue\onecolumn
+  \else
+  \@restonecolfalse
+  \fi
+  \chapter*{\listfixmename
+    \@mkboth{\MakeUppercase\listfixmename}%
+    {\MakeUppercase\listfixmename}}%
+  \@starttoc{lox}%
+  \if@restonecol\twocolumn\fi
+  }
+\newcommand*\l@fixme@report{\@dottedtocline{1}{1.5em}{2.3em}}
+
 \newcommand\listoffixmes@book{%
   \if@twocolumn
   \@restonecoltrue\onecolumn
@@ -227,7 +252,7 @@
 \DeclareOption{info}{\fixmeinfotrue}
 ¡
 %    \end{macrocode}
-% and then the global behavior options. Note that while a \textsf{fixme}
+% and then the global behavior options. Note that while |\fixme{}|
 % generates an error in `final' mode, calling |\listoffixmes| does nothing.
 %    \begin{macrocode}
 \DeclareOption{final}{%
@@ -240,8 +265,20 @@
     \iffixmeinfo\FiXmeInfo{#1}\fi%
     \iffixmeindex\FiXmeIndex{#1}\fi%
     \addcontentsline{lox}{fixme}{#1}}
-  \let\l@fixme\l@fixme@book
-  \let\listoffixmes\listoffixmes@book}
+  \@ifclassloaded{article}{
+    \let\l@fixme\l@fixme@article
+    \let\listoffixmes\listoffixmes@article}{
+    \@ifclassloaded{report}{
+      \let\l@fixme\l@fixme@report
+      \let\listoffixmes\listoffixmes@report}{
+      \@ifclassloaded{book}{
+        \let\l@fixme\l@fixme@book
+        \let\listoffixmes\listoffixmes@book}{
+        \let\l@fixme\l@fixme@article
+        \let\listoffixmes\listoffixmes@article}
+      }
+    }
+  }
 ¡
 %    \end{macrocode}
 % The {\em final} mode is considered to be the default:
