Committed PRCS version branch-1-1.9
Fixed typo in the doc

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.12 Tue, 06 Apr 1999 16:54:37 +0200 verna $
+% PRCS: $Id: fixme.dtx 1.13 Tue, 06 Apr 1999 18:02:58 +0200 verna $
 %
 % Author:        Didier Verna <verna@inf.enst.fr>
 % Maintainer:    Didier Verna <verna@inf.enst.fr>
@@ -61,7 +61,7 @@
 % \CheckSum{151}
 %
 % ^^A $Format: "% \\newcommand{\\packageversion}{$PackageVersion$}"$
-% \newcommand{\packageversion}{1.1-b8}
+% \newcommand{\packageversion}{1.1-b9}
 % ^^A $Format: "% \\newcommand{\\packagedate}{$PackageDate$}"$
 % \newcommand{\packagedate}{1999/04/06}
 % \MakeShortVerb{\|}
@@ -124,7 +124,7 @@
 % \par
 % \DescribeEnv{index} With the {\em index} option, fixme notes can also be
 % inserted in the index of your document. All \textsf{FiXme} index entries
-% appear under the \textbf{***FIXME} key at the beginning of the index.
+% appear under the ``FIXMEs'' key at the beginning of the index.
 % \par
 % \DescribeEnv{warning}\DescribeEnv{info} Additionally, you might want to
 % output warnings on the terminal or in the log file. The {\em warning} option
